# git-worktree-helper

./: .gitignore  AGENTS.md  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
shell/: gwt.ps1  gwt.zsh
src/: gwt.py
src/gwtlib/: __init__.py  completion.py  config.py  config_schema.py  errors.py  help.py  i18n.py  registry.py  utils.py
src/gwtlib/commands/: __init__.py  init.py  merge.py  review.py  setting.py  status.py  update.py  worktree.py
src/gwtlib/tests/: test_i18n.py  test_registry.py  test_worktree_dir.py
