[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-worktree-helper"
version = "0.2.0"
description = "Cross-platform Git Worktree workflow helper CLI (gwt)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
gwt = "gwt:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["gwt"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gwtlib*"]
